manifests/prometheus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-care-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-care-prometheus
  template:
    metadata:
      labels:
        app: history-care-prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
      volumes:
        - name: prometheus-config
          configMap:
            name: history-care-prometheus-conf
