manifests/prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: history-care-prometheus
spec:
  selector:
    app: history-care-prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
