manifests/prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: history-care-prometheus-ingress
spec:
  rules:
    - host: prometheus.history-care.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: history-care-prometheus
                port:
                  number: 9090
